# SOWI

./: LICENSE  Makefile  README.md  log
binary/: CMakeCache.txt  Makefile  cmake_install.cmake
header/: camera.hpp  commandHandler.hpp  commands.hpp  errors.hpp  eventHandler.hpp  helper.hpp  helperOperators.hpp  light.hpp  object.hpp  program.hpp  resourceHandler.hpp  shader.hpp  templateHelper.hpp  texture.hpp
resource/: API2 - Shortcut.lnk  cfragment.frag  ffragment.frag  fragment.frag  fvertex.vert  material1.mtl  vertex.vert
resource/objects/: cube.mtl
resource/shaders/snMap/: fragment.frag  vertex.vert
resource/shaders/textured/: fragment.frag
source/: CMakeLists.txt  Light.cpp  camera.cpp  commandHandler.cpp  commands.cpp  eventHandler.cpp  helper.cpp  main.cpp  program.cpp  resourceHandler.cpp  shader.cpp  test.cpp  texture.cpp
